--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "emailjs-com": "^3.2.0",
+    "node": "^19.0.0",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.5.1",
